@@ -1,5 +1,9 @@
 OpenDNSSEC 1.4.6
 
+* Signer Engine: Print secondary server address when logging notify reply
+  errors.
+
+
 Bugfixes:
 * OPENDNSSEC-617: Signer Engine: Fix DNS Input Adapter to not reject zone
   the first time due to RFC 1982 serial arethmetic.
